--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -49,7 +48,6 @@
         <button type="submit">Buscar</button>
     </form>
 
-    <!-- Nuevos desplegables -->
     <div class="desplegable">
         <h3>Teoría sobre la formulación</h3>
         <p>Aquí puedes encontrar información teórica sobre la formulación química.</p>
@@ -65,7 +63,11 @@
         <p>Descubre cómo se crean y nombran los compuestos químicos.</p>
     </div>
 
-    <!-- Footer -->
+    <div class="desplegable">
+        <h3><a href="/informacion">Información Clave sobre Formulación</a></h3>
+        <p>Haz clic aquí para acceder a un apartado con información esencial sobre este tema.</p>
+    </div>
+
     <div class="footer">
         <p>© 2023 Proyecto Personal - Mateo Martín</p>
     </div>
