--- a/templates/informacion.html
+++ b/templates/informacion.html
@@ -295,7 +295,7 @@
 
             <h3>7.1. Video: Cómo formular en 8 minutos 👍 Formulación química ⚛️ ideas básicas</h3>
             <div class="video-responsive">
-                <iframe src="http://www.youtube.com/watch?v=QrJSL0VN8yE?controls=1&rel=0"
+                <iframe src="https://www.youtube.com/embed/QrJSL0VN8yE"
                         title="Cómo formular en 8 minutos 👍 Formulación química ⚛️ ideas básicas"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen>
@@ -305,7 +305,7 @@
 
             <h3>7.2. Video: ESTEQUIOMETRÍA PASO A PASO CON EJEMPLOS | Química básica</h3>
             <div class="video-responsive">
-                <iframe src="http://www.youtube.com/watch?v=o5n-Ok8vdgE?controls=1&rel=0"
+                <iframe src="https://www.youtube.com/embed/o5n-Ok8vdgE"
                         title="ESTEQUIOMETRÍA PASO A PASO CON EJEMPLOS | Química básica"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen>
