--- a/templates/index.html
+++ b/templates/index.html
@@ -73,3 +73,12 @@
     </div>
 </body>
 </html>
+
+<div class="desplegable">
+    <h3><a href="/test">Pon a prueba tus conocimientos</a></h3>
+    <p>Haz clic aquí para hacer un test de formulación química y comprobar cuánto sabes.</p>
+</div>
+
+<div class="footer">
+    <p>© 2023 Proyecto Personal - Mateo Martín</p>
+</div>
